# indicator

./: Cargo.toml  README.md
example/: basic.rs
src/: error.rs  indicator_ext.rs  indicator_iterator.rs  indicator_stream.rs  lib.rs  test_helper.rs
src/indicators/: aroon_indicator.rs  aroon_oscillator.rs  bolinger_bands.rs  ema.rs  macd.rs  max.rs  max_index.rs  min.rs  min_index.rs  mod.rs  rma.rs  rsi.rs  sma.rs  standard_deviation.rs  stochastics.rs  vwap.rs  vwma.rs
src/operators/: composition.rs  constant.rs  diff.rs  identity.rs  map.rs  mature.rs  mod.rs  together.rs  window.rs
