cargo-features = ["profile-rustflags"]

[package]
name = "indicator"
version = "0.1.0"
edition = "2021"

[[example]]
name = "basic"
path = "./example/basic.rs"

[features]
default = ["std"]
std = []
stream = ["futures-core"]

[dependencies]
futures-core = { version = "0.3", optional = true }

[dev-dependencies]
rand = "0.8"
futures-executor = "0.3"
futures-util = "0.3"